# amblaq2

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/queues/: mpmc.h  mpsc.h  queues_common.h  spmc.h  spsc.h  utypes.h
tests/: cpp11_thread.cpp  cpp11_thread.h  test_queues.c
